# A-quantum-inspired-genetic-algorithm-for-k-means-clustering

./: .gitignore  Essay Structure.ipynb  README.md  pyproject.toml
src/qiga_kmeans/algorithms/: genetic.py  kmeans.py  qiga.py
src/qiga_kmeans/utils/: data_generator.py  preprocessing.py
src/qiga_kmeans/visualization/: plotting.py
tests/unit/algorithms/: test_genetic.py  test_kmeans.py  test_qiga.py
tests/unit/utils/: test_data_generator.py  test_preprocessing.py
